--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ They form a toolchain for the LPC81x.</p>
 <h2><a href="directory_tree.html" name="files">Files</a></h2>
 
 <pre>
-<!a href="libopenlpc81x.html">libopenlpc81x<!/a>
+<a href="libopenlpc81x.html">libopenlpc81x</a>
  |
  |-- examples/ --- nxp_lpc/ --- lpc81x/ --- <!a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">lpc810m021fn8/<!/a>
  |
