Add include directory.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ They form a toolchain for the LPC81x.</p>
  |
  |-- examples/ --- nxp_lpc/ --- lpc81x/ --- <!a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">lpc810m021fn8/<!/a>
  |
- |-- <!a href="include/include.html">include/<!/a> --- nxp_lpc/ --- <!a href="include/nxp_lpc/lpc81x/lpc81x.html">lpc81x/<!/a>
+ |-- <a href="include/include.html">include/</a> --- nxp_lpc/ --- <a href="include/nxp_lpc/lpc81x/lpc81x.html">lpc81x/</a>
  |
  |-- lib/ --- nxp_lpc/ --- <!a href="lib/nxp_lpc/lpc81x/lpc81x.html">lpc81x/<!/a> --- <!a href="lib/nxp_lpc/lpc81x/ldscripts/ldscripts.html">ldscripts/<!/a>
  |
