Add lib directory.

--- a/lib/nxp_lpc/lpc81x/ldscripts/ldscripts.html
+++ b/lib/nxp_lpc/lpc81x/ldscripts/ldscripts.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>libopenlpc81x/</title>
-<link href="stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
-</head>
-<body>
+<title>ldscripts/</title>
+<link href="../../../../stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
+  </head>
+
+  <body>
+
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -19,24 +21,24 @@
             </section>
         </header>
     </div>
-<div id="main_content_wrap" class="outer">
-<section id="main_content" class="inner">
-<h1><a href="index.html#files">libopenlpc81x</a>/
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+<h1><a href="../../../../libopenlpc81x.html">libopenlpc81x</a>/
+lib/
+nxp_lpc/
+<a href="../lpc81x.html">lpc81x</a>/
+ldscripts/
 </h1>
 <pre>
-|-- <a href="Makefile.html">Makefile</a>
-|
-|
-|-- examples/ --- nxp_lpc/ --- lpc81x/ --- <!a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">lpc810m021fn8/<!/a>
-|
-|-- <a href="include/include.html">include/</a> --- nxp_lpc/ --- <a href="include/nxp_lpc/lpc81x/lpc81x.html">lpc81x/</a>
-|
-|-- lib/ --- nxp_lpc/ --- <a href="lib/nxp_lpc/lpc81x/lpc81x.html">lpc81x/</a> --- <a href="lib/nxp_lpc/lpc81x/ldscripts/ldscripts.html">ldscripts/</a>
-|
-`-- tools/ --- nxp_lpc/ --- lpc81x/ --- <!a href="tools/nxp_lpc/lpc81x/usart-util/usart-util.html">usart-util/<!/a>
+|-- <a href="lpc810.x.html">lpc810.x</a>
+|-- <a href="lpc811.x.html">lpc811.x</a>
+`-- <a href="lpc812.x.html">lpc812.x</a>
 </pre>
-</section>
-</div>
+      </section>
+    </div>
+
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
@@ -44,5 +46,8 @@
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-</body>
+
+    
+
+  </body>
 </html>
