Add tools directory.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ They form a toolchain for the LPC81x.</p>
  |
  |-- lib/ --- nxp_lpc/ --- <a href="lib/nxp_lpc/lpc81x/lpc81x.html">lpc81x/</a> --- <a href="lib/nxp_lpc/lpc81x/ldscripts/ldscripts.html">ldscripts/</a>
  |
- `-- tools/ --- nxp_lpc/ --- lpc81x/ --- <!a href="tools/nxp_lpc/lpc81x/usart-util/usart-util.html">usart-util/<!/a>
+ `-- tools/ --- nxp_lpc/ --- lpc81x/ --- <a href="tools/nxp_lpc/lpc81x/usart-util/usart-util.html">usart-util/</a>
 </pre>
 
 <h2>
