Add examples directory.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ They form a toolchain for the LPC81x.</p>
 <pre>
 <a href="libopenlpc81x.html">libopenlpc81x</a>
  |
- |-- examples/ --- nxp_lpc/ --- lpc81x/ --- <!a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">lpc810m021fn8/<!/a>
+ |-- examples/ --- nxp_lpc/ --- lpc81x/ --- <a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">lpc810m021fn8/</a>
  |
  |-- <a href="include/include.html">include/</a> --- nxp_lpc/ --- <a href="include/nxp_lpc/lpc81x/lpc81x.html">lpc81x/</a>
  |
@@ -166,7 +166,11 @@ wrote 1220 bytes
 
 <h2>
 <a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<!a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">Examples<!/a></h2>
+<a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">Examples</a></h2>
+
+<p>There are some LPC810 examples.</p>
+
+<p><img src="examples/nxp_lpc/lpc81x/lpc810m021fn8/miniblink/layout.jpg" width="320" height="226" alt="LPC810 example"></p>
 
 <p>You can use <code>make</code> to generate the binary file:</p>
 
