--- a/libopenlpc81x.html
+++ b/libopenlpc81x.html
@@ -27,7 +27,7 @@
 |-- <a href="Makefile.html">Makefile</a>
 |
 |
-|-- examples/ --- nxp_lpc/ --- lpc81x/ --- <!a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">lpc810m021fn8/<!/a>
+|-- examples/ --- nxp_lpc/ --- lpc81x/ --- <a href="examples/nxp_lpc/lpc81x/lpc810m021fn8/lpc810m021fn8.html">lpc810m021fn8/</a>
 |
 |-- <a href="include/include.html">include/</a> --- nxp_lpc/ --- <a href="include/nxp_lpc/lpc81x/lpc81x.html">lpc81x/</a>
 |
